[表情发送 表情接收]

--- a/messagelist/src/main/res/layout/item_receive_emoticon.xml
+++ b/messagelist/src/main/res/layout/item_receive_emoticon.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              style="@style/aurora_msgitem_receive_style">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/aurora_msgitem_send_style">
 
     <cn.jiguang.imui.view.RoundTextView
         android:id="@+id/aurora_tv_msgitem_date"
@@ -10,38 +10,38 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
 
         <cn.jiguang.imui.view.RoundImageView
             android:id="@+id/aurora_iv_msgitem_avatar"
             android:contentDescription="@string/aurora_avatar_desc"
             style="@style/aurora_msgitem_receiver_avatar_style"/>
 
+
         <TextView
-            android:id="@+id/aurora_tv_msgitem_receiver_display_name"
-            style="@style/aurora_msgitem_receiver_display_name_style"
+            android:id="@+id/aurora_tv_msgitem_sender_display_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:gravity="end"
+            android:textAlignment="textEnd"
+            style="@style/aurora_msgitem_sender_display_name_style"
             android:layout_toRightOf="@id/aurora_iv_msgitem_avatar"
-            />
+/>
 
-        <cn.jiguang.imui.view.ShapeImageView
+
+        <ImageView
             android:id="@+id/aurora_iv_msgitem_photo"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:adjustViewBounds="true"
-            android:background="#000"
-            android:maxHeight="200dp"
-            android:maxWidth="200dp"
-            android:layout_below="@id/aurora_tv_msgitem_receiver_display_name"
-            android:layout_centerVertical="true"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="centerCrop"
+            android:layout_below="@+id/aurora_tv_msgitem_sender_display_name"
             android:layout_toRightOf="@id/aurora_iv_msgitem_avatar"
             android:src="@drawable/aurora_picture_not_found"
             android:padding="0dp"
-
-            app:photoMessageRadius="8dp"
             />
+
+
 
         <ImageButton
             android:id="@+id/aurora_ib_msgitem_resend"
@@ -49,10 +49,13 @@
             android:layout_height="20dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/aurora_iv_msgitem_photo"
+            android:layout_toRightOf="@+id/aurora_iv_msgitem_photo_send"
             android:scaleType="fitCenter"
             android:background="@drawable/aurora_send_msg_error"
             android:visibility="gone" />
 
+
+
     </RelativeLayout>
+
 </LinearLayout>
