[语音发送 语音接收]

--- a/messagelist/src/main/res/layout/item_send_voice.xml
+++ b/messagelist/src/main/res/layout/item_send_voice.xml
@@ -114,6 +114,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_gravity="right"
                 android:textSize="11sp"
+                android:visibility="gone"
                 android:textColor="#999999"
                 android:text="送达"
                 />
