--- a/messagelist/src/main/res/drawable/aurora_anim_send_voice.xml
+++ b/messagelist/src/main/res/drawable/aurora_anim_send_voice.xml
@@ -2,6 +2,9 @@
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="false">
     <item
+        android:drawable="@drawable/aurora_sendvoice_send_3"
+        android:duration="200" />
+    <item
         android:drawable="@drawable/aurora_sendvoice_send_1"
         android:duration="200" />
     <item
