--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -49,6 +49,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/chat_user_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="清水さん"
@@ -57,6 +58,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/chat_user_company"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="任天堂株式会社"
