--- a/messagelist/src/main/res/layout/communication.xml
+++ b/messagelist/src/main/res/layout/communication.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/communication_parent"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="left"
-    android:paddingBottom="15dp"
-    android:orientation="horizontal">
+    style="@style/aurora_msgitem_receive_style">
 
 
     <cn.jiguang.imui.view.RoundTextView
         android:id="@+id/aurora_tv_msgitem_date"
         style="@style/aurora_msgitem_date_style" />
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
 
 
     <cn.jiguang.imui.view.RoundImageView
@@ -110,5 +113,5 @@
         android:contentDescription="@string/aurora_avatar_desc" />
 
 
-
+</LinearLayout>
 </LinearLayout>
