--- a/messagelist/src/main/res/layout/communication.xml
+++ b/messagelist/src/main/res/layout/communication.xml
@@ -70,6 +70,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/exchangeRefuse"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="12dp"
@@ -95,7 +96,7 @@
                 android:layout_marginLeft="12dp"
                 android:layout_weight="1"
                 android:gravity="center"
-
+                android:id="@+id/exchangeReceive"
                 android:letterSpacing="0.1"
                 android:text="同意"
                 android:textColor="#FFB706"
