[请求电话/line交换和同意/拒绝的处理]

--- a/messagelist/src/main/res/values/colors.xml
+++ b/messagelist/src/main/res/values/colors.xml
@@ -21,4 +21,7 @@
     <color name="aurora_event_msg_bg_color">#cecece</color>
     <color name="aurora_video_message_duration_text_color">#545454</color>
 
+
+    <color name="graycd">#cdcdcd</color>
+
 </resources>
