--- a/messagelist/src/main/res/layout/communication.xml
+++ b/messagelist/src/main/res/layout/communication.xml
@@ -12,107 +12,106 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
 
 
-    <cn.jiguang.imui.view.RoundImageView
-        android:id="@+id/aurora_iv_msgitem_avatar_receive"
-        style="@style/aurora_msgitem_receiver_avatar_style"
-        android:contentDescription="@string/aurora_avatar_desc" />
-
-    <LinearLayout
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:background="@color/white"
-        android:orientation="vertical">
+        <cn.jiguang.imui.view.RoundImageView
+            android:id="@+id/aurora_iv_msgitem_avatar_receive"
+            style="@style/aurora_msgitem_receiver_avatar_style"
+            android:contentDescription="@string/aurora_avatar_desc" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:gravity="top"
-            android:orientation="horizontal">
+            android:background="@color/white"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-
-            <ImageView
-                android:id="@+id/communication_type"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ico_phone" />
-
-            <TextView
-                android:id="@+id/communication_content"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:gravity="center_vertical"
-                android:letterSpacing="0.05"
-                android:text=""
-                android:textColor="#333"
-                android:textSize="14sp" />
-
-        </LinearLayout>
+                android:layout_margin="15dp"
+                android:gravity="top"
+                android:orientation="horizontal">
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginRight="1dp"
-            android:background="#d8d8d8" />
+                <ImageView
+                    android:id="@+id/communication_type"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/ico_phone" />
 
+                <TextView
+                    android:id="@+id/communication_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:gravity="center_vertical"
+                    android:letterSpacing="0.05"
+                    android:text=""
+                    android:textColor="#333"
+                    android:textSize="14sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:orientation="horizontal">
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/exchangeRefuse"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="12dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:letterSpacing="0.1"
-                android:text="拒否"
-                android:textColor="#333"
-                android:textSize="15sp" />
 
             <TextView
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginRight="1dp"
                 android:background="#d8d8d8" />
 
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_marginLeft="12dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:id="@+id/exchangeReceive"
-                android:letterSpacing="0.1"
-                android:text="同意"
-                android:textColor="#FFB706"
-                android:textSize="15sp" />
+            <LinearLayout
+                android:id="@+id/buttonParent"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/exchangeRefuse"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:letterSpacing="0.1"
+                    android:text="拒否"
+                    android:textColor="#333"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="#d8d8d8" />
+
+
+                <TextView
+                    android:id="@+id/exchangeReceive"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:letterSpacing="0.1"
+                    android:text="同意"
+                    android:textColor="#FFB706"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
+
+        <cn.jiguang.imui.view.RoundImageView
+            android:id="@+id/aurora_iv_msgitem_avatar_send"
+            style="@style/aurora_msgitem_sender_avatar_style"
+            android:contentDescription="@string/aurora_avatar_desc"
+            android:visibility="gone" />
+
+
     </LinearLayout>
-
-
-    <cn.jiguang.imui.view.RoundImageView
-        android:id="@+id/aurora_iv_msgitem_avatar_send"
-        style="@style/aurora_msgitem_sender_avatar_style"
-        android:visibility="gone"
-        android:contentDescription="@string/aurora_avatar_desc" />
-
-
-</LinearLayout>
 </LinearLayout>
