--- a/app/src/main/res/drawable-v24/input_border.xml
+++ b/app/src/main/res/drawable-v24/input_border.xml
@@ -5,7 +5,7 @@
     //这里是设置边框线的粗细和颜色
     <stroke
             android:width="1dp"
-            android:color= "@color/grayCD" />
+            android:color= "#FFCDCDCD" />
 
     <padding
             android:bottom="1dp"
