--- a/app/src/main/res/layout/resume_menu_item.xml
+++ b/app/src/main/res/layout/resume_menu_item.xml
@@ -12,14 +12,14 @@
         android:id="@+id/resume_item_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_marginLeft="25dp"
         android:src="@drawable/ico_selected"
          />
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:background="#fff"
@@ -67,6 +67,16 @@
 
 
     </LinearLayout>
+
+
+    <ImageView
+            android:id="@+id/resume_item_checked"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="30dp"
+            android:src="@drawable/ico_selected"
+            android:visibility="gone"
+    />
 
 
 </LinearLayout>
