--- a/app/src/main/res/layout/rl_rename.xml
+++ b/app/src/main/res/layout/rl_rename.xml
@@ -21,6 +21,7 @@
         <EditText android:layout_width="match_parent"
                   android:layout_height="70dp"
                   android:layout_marginTop="20dp"
+                  android:id="@+id/update_id"
                   android:hint="@string/rlRenameHint"
                   android:gravity="top"
                   android:textColorHint="@color/gray5c"
