--- a/app/src/main/res/values/url.xml
+++ b/app/src/main/res/values/url.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="userUrl" translatable="false">https://user.sk.cgland.top/https://user.sk.cgland.top/</string>
+    <string name="userUrl" translatable="false">https://user.sk.cgland.top/</string>
+    <string name="interUrl" translatable="false">https://interview.sk.cgland.top/</string>
+    <string name="jobUrl" translatable="false">https://job.sk.cgland.top/</string>
+    <string name="storageUrl" translatable="false">https://storage.sk.cgland.top/</string>
 </resources>
