--- a/app/src/main/res/layout/roll_choose_one.xml
+++ b/app/src/main/res/layout/roll_choose_one.xml
@@ -21,11 +21,12 @@
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="15dp"></Toolbar>
             <TextView
+                    android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:text="履歴書の表示"
                     android:textSize="15sp"
+                    android:textColor="#FF333333"
                     android:textStyle="bold"/>
             <Toolbar
                     android:id="@+id/tool2"
@@ -39,19 +40,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@drawable/text_view_bottom_border"></View>
-        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent">
 
-            <com.example.sk_android.custom.layout.MyPicker
-                    android:id="@+id/picker_view1"
-                    android:layout_width="205dp"
+            <top.defaults.view.PickerView
+                    android:id="@+id/picker_view"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"/>
-            <com.example.sk_android.custom.layout.MyPicker
-                    android:id="@+id/picker_view2"
-                    android:layout_width="205dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentRight="true"/>
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 </RelativeLayout>
