--- a/app/src/main/res/values/url.xml
+++ b/app/src/main/res/values/url.xml
@@ -3,4 +3,7 @@
     <string name="interUrl" translatable="false">https://interview.sk.cgland.top/</string>
     <string name="jobUrl" translatable="false">https://job.sk.cgland.top/</string>
     <string name="storageUrl" translatable="false">https://storage.sk.cgland.top/</string>
+    <string name="authUrl" translatable="false">https://auth.sk.cgland.top/</string>
+    <string name="baseUrl" translatable="false">https://basic-info.sk.cgland.top/</string>
+    <string name="industryUrl" translatable="false">https://industry.sk.cgland.top/</string>
 </resources>
