--- a/app/src/main/res/layout/radion.xml
+++ b/app/src/main/res/layout/radion.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:id="@+id/LinearLayout1"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
-              android:orientation="vertical">
+              android:orientation="horizontal">
 
     <CheckBox
             android:id="@+id/cornerstone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="7dp"
-            android:text= "上記会員規約と個人情報の取り扱いに同意し会員登録"
             android:button="@drawable/checked_size"
-            android:textSize="12sp"
-            android:textColor="#333333"
             android:checked="false"/>
+
+    <TextView android:layout_width="wrap_content"
+              android:id="@+id/testText"
+              android:text= "@string/loginRequired"
+              android:textSize="12sp"
+              android:textColor="@color/blue02B8F7"
+              android:layout_height="wrap_content"/>
 
 </LinearLayout>
 
