发送职位信息

--- a/messagelist/src/main/res/layout/job_info.xml
+++ b/messagelist/src/main/res/layout/job_info.xml
@@ -1,254 +1,275 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/aurora_msgitem_send_style">
+              style="@style/aurora_msgitem_send_style">
 
 
     <LinearLayout
-        android:id="@+id/aurora_tv_msgitem_date"
-        android:orientation="vertical"
-        android:layout_height="218dp"
-        android:background="@drawable/border_e2"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_width="match_parent"
-        >
+            android:id="@+id/aurora_tv_msgitem_date"
+            android:orientation="vertical"
+            android:layout_height="218dp"
+            android:background="@drawable/border_e2"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_width="match_parent"
+    >
 
 
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_height="42dp"
-            android:layout_width="match_parent"
-            >
+                android:orientation="horizontal"
+                android:layout_height="42dp"
+                android:layout_width="match_parent"
+        >
 
             <LinearLayout
-                android:orientation="horizontal"
-                android:layout_height="match_parent"
-                android:layout_width="130dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/box_shadow_bottom"
-                android:gravity="center_vertical"
-                android:layout_marginTop="2dp"
-                >
-
-               <TextView
-                   android:layout_height="19dp"
-                   android:layout_width="19dp"
-                   android:textSize="10sp"
-                   android:textColor="#ffffff"
-                   android:text="年"
-                   android:gravity="center"
-                   android:background="@drawable/circle_border_white"
-                   android:layout_marginLeft="8dp"
-                   />
+                    android:orientation="horizontal"
+                    android:layout_height="match_parent"
+                    android:layout_width="130dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/button_radius_border_no_top"
+                    android:gravity="center_vertical"
+                    android:layout_marginTop="2dp"
+            >
 
                 <TextView
-                    android:layout_height="19dp"
-                    android:layout_width="wrap_content"
-                    android:textSize="12sp"
-                    android:textColor="#ffffff"
-                    android:text="600台~800台"
-                    android:gravity="center"
-                    android:layout_marginLeft="8dp"
-                    />
+                        android:id="@+id/salaryType"
+                        android:layout_height="19dp"
+                        android:layout_width="19dp"
+                        android:textSize="10sp"
+                        android:textColor="#ffffff"
+                        android:text="年"
+                        android:gravity="center"
+                        android:background="@drawable/circle_border_white"
+                        android:layout_marginLeft="8dp"
+                />
+
+                <TextView
+                        android:id="@+id/showSalaryMinToMax"
+                        android:layout_height="19dp"
+                        android:layout_width="wrap_content"
+                        android:textSize="12sp"
+                        android:textColor="#ffffff"
+                        android:text="600台~800台"
+                        android:gravity="center"
+                        android:layout_marginLeft="8dp"
+                />
 
 
             </LinearLayout>
 
 
-
             <RelativeLayout
-                android:layout_height="match_parent"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_marginRight="17dp"
-                android:layout_marginLeft="15dp"
-                >
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_marginRight="17dp"
+                    android:layout_marginLeft="15dp"
+            >
 
                 <LinearLayout
-                    android:layout_height="match_parent"
-                    android:layout_width="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="8dp"
-                    android:orientation="horizontal"
-                    android:gravity="bottom"
-                    >
+                        android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginBottom="8dp"
+                        android:orientation="horizontal"
+                        android:gravity="bottom"
+                >
 
 
                     <ImageView
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:src="@drawable/icon_canbu_home"
-                        />
+                            android:id="@+id/haveCanteen"
+
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:src="@drawable/icon_canbu_home"
+                    />
 
                     <ImageView
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:layout_marginLeft="17dp"
-                        android:src="@drawable/icon_coffee_home"
-                        />
+                            android:id="@+id/haveClub"
+
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:layout_marginLeft="17dp"
+                            android:src="@drawable/icon_coffee_home"
+                    />
 
                     <ImageView
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:layout_marginLeft="17dp"
-                        android:src="@drawable/icon_fl_home"
-                        />
+                            android:id="@+id/haveSocialInsurance"
+
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:layout_marginLeft="17dp"
+                            android:src="@drawable/icon_fl_home"
+                    />
 
                     <ImageView
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:layout_marginLeft="17dp"
-                        android:src="@drawable/icon_cb_home"
-                        />
+                            android:id="@+id/haveTraffic"
+
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:layout_marginLeft="17dp"
+                            android:src="@drawable/icon_cb_home"
+                    />
 
 
                 </LinearLayout>
 
                 <ImageView
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="8dp"
-                    android:src="@drawable/icon_new_home"
-                    />
+
+                        android:id="@+id/isNew"
+
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginBottom="8dp"
+                        android:src="@drawable/icon_new_home"
+                />
 
             </RelativeLayout>
 
         </LinearLayout>
 
 
+        <TextView
+                android:id="@+id/companyName"
+
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="13sp"
+                android:textColor="#999999"
+                android:text="株式会社日本電気"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="15dp"
+                android:textStyle="bold"
+        />
+
 
         <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:textSize="13sp"
-            android:textColor="#999999"
-            android:text="株式会社日本電気"
-            android:gravity="center_vertical"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
-            android:textStyle="bold"
-            />
+                android:id="@+id/userPositionName"
 
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:textSize="16sp"
+                android:textColor="#202020"
+                android:text="株式会社日本電気"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="4dp"
+                android:textStyle="bold"
 
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:textSize="16sp"
-            android:textColor="#202020"
-            android:text="株式会社日本電気"
-            android:gravity="center_vertical"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="4dp"
-            android:textStyle="bold"
-
-            />
-
+        />
 
 
         <LinearLayout
-            android:layout_height="18dp"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="20dp"
-            android:orientation="horizontal"
+                android:layout_height="18dp"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="20dp"
+                android:orientation="horizontal"
 
-            >
+        >
 
 
             <TextView
-                android:layout_height="match_parent"
-                android:layout_width="wrap_content"
-                android:paddingLeft="7dp"
-                android:paddingRight="7dp"
-                android:gravity="center_vertical"
-                android:text="東京"
-                android:textSize="11sp"
-                android:textColor="#0097D6"
-                android:background="@drawable/theme_bule_border"
-                />
 
+                    android:id="@+id/address"
 
-
-            <TextView
-                android:layout_height="match_parent"
-                android:layout_width="wrap_content"
-                android:paddingLeft="7dp"
-                android:paddingRight="7dp"
-                android:layout_marginLeft="5dp"
-                android:gravity="center_vertical"
-                android:text="1～3"
-                android:textSize="11sp"
-                android:textColor="#0097D6"
-                android:background="@drawable/theme_bule_border"
-                />
-
+                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:paddingLeft="7dp"
+                    android:paddingRight="7dp"
+                    android:gravity="center_vertical"
+                    android:text="東京"
+                    android:textSize="11sp"
+                    android:textColor="#0097D6"
+                    android:background="@drawable/theme_bule_border"
+            />
 
 
             <TextView
-                android:layout_height="match_parent"
-                android:layout_width="wrap_content"
-                android:paddingLeft="7dp"
-                android:paddingRight="7dp"
-                android:layout_marginLeft="5dp"
-                android:gravity="center_vertical"
-                android:text="大卒"
-                android:textSize="11sp"
-                android:textColor="#0097D6"
-                android:background="@drawable/theme_bule_border"
-                />
+                    android:id="@+id/workingExperience"
+
+                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:paddingLeft="7dp"
+                    android:paddingRight="7dp"
+                    android:layout_marginLeft="5dp"
+                    android:gravity="center_vertical"
+                    android:text="1～3"
+                    android:textSize="11sp"
+                    android:textColor="#0097D6"
+                    android:background="@drawable/theme_bule_border"
+            />
+
+
+            <TextView
+
+                    android:id="@+id/educationalBackground"
+
+                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:paddingLeft="7dp"
+                    android:paddingRight="7dp"
+                    android:layout_marginLeft="5dp"
+                    android:gravity="center_vertical"
+                    android:text="大卒"
+                    android:textSize="11sp"
+                    android:textColor="#0097D6"
+                    android:background="@drawable/theme_bule_border"
+            />
 
         </LinearLayout>
 
 
-
-
-
         <RelativeLayout
-            android:layout_height="30dp"
-            android:layout_width="match_parent"
-            android:layout_marginRight="17dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
-            >
+                android:layout_height="30dp"
+                android:layout_width="match_parent"
+                android:layout_marginRight="17dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="15dp"
+        >
 
 
             <LinearLayout
-                android:layout_height="match_parent"
-                android:layout_width="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                >
+                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+            >
 
 
                 <ImageView
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:src="@drawable/icon_tx_home"
-                    />
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:src="@drawable/icon_tx_home"
+                />
 
 
                 <TextView
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="ジャさん·社長"
-                    android:textSize="11sp"
-                    android:textStyle="bold"
-                    android:gravity="center_vertical"
-                    android:textColor="#5c5c5c"
-                    />
+
+
+                        android:id="@+id/userPositionNameAndUserName"
+
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="ジャさん·社長"
+                        android:textSize="11sp"
+                        android:textStyle="bold"
+                        android:gravity="center_vertical"
+                        android:textColor="#5c5c5c"
+                />
 
 
                 <ImageView
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/icon_gold_home"
-                    />
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:src="@drawable/icon_gold_home"
+                />
 
 
             </LinearLayout>
@@ -257,40 +278,39 @@
 
 
         <LinearLayout
-            android:layout_height="35dp"
-            android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/top_border_d8"
-            >
+                android:layout_height="35dp"
+                android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/top_border_d8"
+        >
 
             <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="1月18日"
-                />
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:text="1月18日"
+            />
 
 
             <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="15:30"
-                />
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="15:30"
+            />
 
             <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_marginLeft="3dp"
-                android:text="あなたからのチャット"
-                />
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    android:text="あなたからのチャット"
+            />
 
 
         </LinearLayout>
-
 
 
     </LinearLayout>
