--- a/messagelist/src/main/res/layout/send_offer.xml
+++ b/messagelist/src/main/res/layout/send_offer.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="left"
-    android:paddingBottom="15dp"
-    android:orientation="horizontal">
+              style="@style/aurora_msgitem_receive_style">
 
 
     <cn.jiguang.imui.view.RoundTextView
         android:id="@+id/aurora_tv_msgitem_date"
         style="@style/aurora_msgitem_date_style" />
+
+
+
+
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+
+
 
 
     <cn.jiguang.imui.view.RoundImageView
@@ -56,7 +64,7 @@
 
     </LinearLayout>
 
-
+    </LinearLayout>
 
 
 </LinearLayout>
