--- a/messagelist/src/main/res/layout/send_offer.xml
+++ b/messagelist/src/main/res/layout/send_offer.xml
@@ -38,7 +38,8 @@
         <TextView
             android:id="@+id/sendOffer_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_margin="15dp"
             android:text=""
 
