--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -7,15 +7,12 @@
               android:orientation="vertical">
 
     <LinearLayout
-            android:layout_width="230dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
             android:background="@drawable/alert_background"
-            android:minWidth="100dp"
+            android:minWidth="50dp"
             android:gravity="center"
-            android:paddingLeft="15dp"
-            android:paddingTop="10dp"
-            android:paddingRight="15dp"
-            android:paddingBottom="10dp" >
+            android:padding="10dp" >
 
         <ProgressBar
                 android:layout_width="35dp"
@@ -25,14 +22,14 @@
                 android:indeterminateDrawable="@drawable/dialog_loading"
                 android:indeterminateOnly="true" />
 
-        <TextView
-                android:id="@+id/tipTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:paddingLeft="15dp"
-                android:textColor="#FFFFFF"
-                android:textSize="17sp"/>
+        <!--<TextView-->
+                <!--android:id="@+id/tipTextView"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center_vertical"-->
+                <!--android:paddingLeft="15dp"-->
+                <!--android:textColor="#FFFFFF"-->
+                <!--android:textSize="17sp"/>-->
     </LinearLayout>
 
 </LinearLayout>
