--- a/app/src/main/res/layout/radion.xml
+++ b/app/src/main/res/layout/radion.xml
@@ -11,9 +11,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="7dp"
-            android:button="@drawable/checked_size"
-            android:checked="false"/>
 
+            android:checked="false"/>
+    <!--android:button="@drawable/checked_size"-->
     <TextView android:layout_width="wrap_content"
               android:id="@+id/testText"
               android:text= "@string/loginRequired"
