--- a/app/src/main/res/layout/person_state.xml
+++ b/app/src/main/res/layout/person_state.xml
@@ -6,7 +6,7 @@
     <LinearLayout android:layout_width="match_parent"
                   android:orientation="vertical"
                   android:id="@+id/person_state"
-                  android:background="@drawable/interview_popup"
+                  android:background="#ffffff"
                   android:layout_height="312dp">
 
         <LinearLayout android:layout_width="match_parent"
