--- a/app/src/main/res/layout/fresh_footer.xml
+++ b/app/src/main/res/layout/fresh_footer.xml
@@ -8,25 +8,23 @@
     <TextView
             android:layout_width="2000dp"
             android:layout_height="50dp"
-
             >
     </TextView>
 
     <TextView
-            android:id="@+id/freshText"
+            android:id="@+id/footerFreshText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:text="下拉刷新"/>
+            android:layout_centerInParent="true"
+            android:text="上拉刷新"/>
 
     <ImageView
-            android:id="@+id/icon"
+            android:id="@+id/footerIcon"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="8dp"
-            android:layout_toLeftOf="@id/freshText"/>
+            android:layout_toLeftOf="@id/footerFreshText"/>
 
 
 
