--- a/app/src/main/res/values/url.xml
+++ b/app/src/main/res/values/url.xml
@@ -9,4 +9,5 @@
     <string name="fileUploadUrl" translatable="false">https://industry.sk.cgland.top/</string>
     <string name="orgUrl" translatable="false">https://org.sk.cgland.top/</string>
     <string name="organizationUrl" translatable="false">https://organization-position.sk.cgland.top</string>
+    <string name="mailUrl" translatable="false">https://mail.sk.cgland.top/</string>
 </resources>
